--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /OTUS-Algos-HW-6/obj
 /OTUS-Algos-HW-7/bin
 /OTUS-Algos-HW-7/obj
+/OTUS-Algos-HW-8/artifacts
+/OTUS-Algos-HW-8/bin
+/OTUS-Algos-HW-8/obj
